# trip-atlas

.github/workflows/: build_and_deploy_frontend.yaml  build_server.yaml
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  main.tsx  stations_test_data.json  test_fragment_shader.glsl  test_vertex_shader.glsl
gather_data/: .gitignore  gather_data.ts
server/: Cargo.toml
server/.cargo/: config.toml
server/src/: export_station_locations.rs  find_optimal_paths.rs  gtfs_rkyv.rs  main.rs  memory_mapped_rkyv.rs  pooled_chunked_vector.rs  prepare_direct_connections_rkyv.rs  prepare_gtfs.rs  prepare_gtfs_as_rkyv.rs
storage/: commands.txt  s3cmd-cors.xml
trip-atlas-frontend/: package-lock.json  package.json
trip-atlas-frontend/src/: App.tsx  main.tsx  stations_test_data.json
