[package]
name = "trip-atlas-server"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4.39", features = [
    "rkyv-32",
    "rkyv-validation",
    "serde",
] }
priority-queue = "2.1.1"
ustr = { version = "1.1.0", features = ["serde"] }
sqlx = { version = "0.8.2", features = ["runtime-tokio-native-tls", "sqlite"] }
tokio = { version = "1.41.1", features = ["full"] }
anyhow = "1.0.95"
futures = "0.3.31"
clap = { version = "4.5.27", features = ["derive"] }
gtfs-structures = "0.42.0"
rkyv = "0.8.10"
log = "0.4.25"
simple_logger = "5.0.0"
